seeqt/QtWidgets/gen_qwhatsthis.h

class QAction;
class QObject;
class QPoint;
class QWhatsThis;
class QWidget;
typedef struct QAction QAction;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QWhatsThis QWhatsThis;
typedef struct QWidget QWidget;
void QWhatsThis_enterWhatsThisMode();
bool QWhatsThis_inWhatsThisMode();
void QWhatsThis_leaveWhatsThisMode();
void QWhatsThis_showText(QPoint* pos, struct miqt_string text);
void QWhatsThis_hideText();
QAction* QWhatsThis_createAction();
void QWhatsThis_showText3(QPoint* pos, struct miqt_string text, QWidget* w);
QAction* QWhatsThis_createAction1(QObject* parent);
void QWhatsThis_delete(QWhatsThis* self);